sandc/test/fixtures/astRegression/shouldFail/productions/classInstanceMethodDeclaration/ProtOverride.sand
pub class ProtOverride {
    prot override foo() {
        
    }
}